update csv and pandas dataframe filter condition

--- a/analysis/en_py3_virtualization.ipynb
+++ b/analysis/en_py3_virtualization.ipynb
@@ -32,7 +32,7 @@
     "    \n",
     "def include_name(x):\n",
     "    if not isnan_wrapper(x):\n",
-    "        return \"长春生物\" in x\n",
+    "        return \"长春\" in x\n",
     "    return False\n",
     "\n",
     "def isnan_wrapper(x):\n",
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_DIR = '#YOUR_OWN_PATH'\n",
+    "BASE_DIR = 'C:\\\\Users\\\\UU\\\\Desktop\\\\fuckcqcs\\\\csv'\n",
     "csv_files = os.listdir(BASE_DIR) \n",
     "dfs = [pd.read_csv(os.path.join(BASE_DIR, csv_file), engine='python', encoding='utf-8') for csv_file in csv_files]"
    ]
@@ -68,10 +68,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs[11]['src'] = map(parse_src, dfs[11]['品名'])\n",
-    "dfs[11].rename({\"供应商/生产企业\" : \"create_company\",\n",
-    "                \"中标价（元）\": \"price\",\n",
-    "                \"品名\" : \"name\"\n",
+    "dfs[11]['src'] = map(parse_src, dfs[11]['name'])\n",
+    "dfs[11].rename({\"create_company\" : \"create_company\",\n",
+    "                \"price\": \"price\",\n",
+    "                \"name\" : \"name\"\n",
     "               }, axis = 1, inplace = True)\n",
     "dfs[11]['prov'] = csv_files[11].strip(\".csv\")\n",
     "dfs[11] = dfs[11][['name', 'src', 'create_company', 'prov', 'price']].copy()"
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "final_df = pd.concat(dfs, sort=True)\n",
-    "final_df.name = final_df.name.apply(lambda x: x.strip())\n",
+    "final_df.name = final_df.name.apply(lambda x: str(x).strip())\n",
     "\n",
     "has_data_provs = final_df.prov.unique()\n",
     "vaccinations_affected = final_df[final_df.create_company.apply(include_name)].name.unique()"
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_DIR2 = '#YOUR_OWN_PATH'\n",
+    "BASE_DIR2 = 'C:\\\\Users\\\\UU\\\\Desktop\\\\fuckcqcs\\\\src'\n",
     "with open(os.path.join(BASE_DIR2,  'zh-mainland-provinces.geojson'), 'r', encoding='utf-8') as f:\n",
     "    geo_data = json.load(f)\n",
     "    \n",
@@ -114,26 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prov_affected(prov, included_prov):\n",
     "    # return True if prov is in included_prov\n",
     "    for a_prov in included_prov:\n",
-    "        if prov in a_prov:\n",
+    "        if str(prov) in str(a_prov):\n",
     "            return True\n",
     "    return False\n",
     "\n",
     "def prov_included(prov, has_data_provs):\n",
     "    # return True if prov is in has_data_provs\n",
     "    for a_prov in has_data_provs:\n",
-    "        if prov in a_prov:\n",
+    "        if str(prov) in str(a_prov):\n",
     "            return True\n",
     "    return False\n",
     "\n",
     "def prepare_geo_json(vac_name, final_df, geo_data, has_data_provs):\n",
-    "    part_df = final_df[np.logical_and(final_df.name == vac_name, '长春生物' == final_df.create_company)]\n",
+    "    part_df = final_df[np.logical_and(final_df.name == vac_name, '长春' in final_df.create_company.to_string())]\n",
     "    included_prov = part_df.prov.unique()\n",
     "    geo_data_copy = copy.deepcopy(geo_data)\n",
     "    for idx, feature in enumerate(geo_data_copy['features']):\n",
@@ -158,27 +158,27 @@
     "                'color': 'black',\n",
     "                'weight': 1,\n",
     "                'fillColor': 'red',\n",
-    "                'fillOpacity': 0.3\n",
+    "                'fillOpacity': 1\n",
     "            }\n",
     "        else: # has data but no affected vaccine - white\n",
     "            feature['properties']['style'] = {\n",
     "                'color': 'black',\n",
     "                'weight': 1,\n",
     "                'fillColor': 'white',\n",
-    "                'fillOpacity': 0.3\n",
+    "                'fillOpacity': 1\n",
     "            }\n",
     "    return geo_data_copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "290558941e8b47cb8f5ca7cddf9ad2ea",
+       "model_id": "3c4b7ed0d275497eba0948bf9c6929dd",
        "version_major": 2,
        "version_minor": 0
       },
